--- a/style.css
+++ b/style.css
@@ -277,7 +277,7 @@ header {
 
 
 #campus {
-    background-image: url(imagenes/SENATI\ FONDO.png);
+    background-image: url(imagenes/SENATI FONDO_11zon.webp);
     background-size: cover;
     background-position: center;
     gap: 30px;
