--- a/style.css
+++ b/style.css
@@ -368,7 +368,7 @@ footer{
         & p{
             padding-top: 5px;
             font-size: 14px;
-            color: var(--colorgristexto);
+            color: var(--colornegro);
         }
 
     }
