--- a/style.css
+++ b/style.css
@@ -427,7 +427,7 @@ textarea:focus {
    
     border-radius: 4px;
     border: 1px solid #d9534f;
-    background-color: #d9534f;
+    background-color: rgb(255, 83, 31);
     color: var(--colorblanco);
     font-size: 16px;
     
